tests/src/frontend/typechecking/invalid/bind_dot2.sk
mutable class Foo(value: mutable Bar)
mutable class Bar(mutable dummy: String = "")

fun main(): void {
  foo = Foo(Bar());
  !foo.value = mutable Bar();
  _ = foo;
  print_raw("Fail")
}
